--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -18963,6 +18963,25 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Dialogue.IllidariDialogueSetup.Setup
   nameWithType: IllidariDialogueSetup.Setup
+- uid: WarcraftLegacies.Source.Dialogue.LegionDialogueSeup
+  name: LegionDialogueSeup
+  href: api-source/WarcraftLegacies.Source.Dialogue.LegionDialogueSeup.html
+  commentId: T:WarcraftLegacies.Source.Dialogue.LegionDialogueSeup
+  fullName: WarcraftLegacies.Source.Dialogue.LegionDialogueSeup
+  nameWithType: LegionDialogueSeup
+- uid: WarcraftLegacies.Source.Dialogue.LegionDialogueSeup.Setup
+  name: Setup()
+  href: api-source/WarcraftLegacies.Source.Dialogue.LegionDialogueSeup.html#WarcraftLegacies_Source_Dialogue_LegionDialogueSeup_Setup
+  commentId: M:WarcraftLegacies.Source.Dialogue.LegionDialogueSeup.Setup
+  fullName: WarcraftLegacies.Source.Dialogue.LegionDialogueSeup.Setup()
+  nameWithType: LegionDialogueSeup.Setup()
+- uid: WarcraftLegacies.Source.Dialogue.LegionDialogueSeup.Setup*
+  name: Setup
+  href: api-source/WarcraftLegacies.Source.Dialogue.LegionDialogueSeup.html#WarcraftLegacies_Source_Dialogue_LegionDialogueSeup_Setup_
+  commentId: Overload:WarcraftLegacies.Source.Dialogue.LegionDialogueSeup.Setup
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Dialogue.LegionDialogueSeup.Setup
+  nameWithType: LegionDialogueSeup.Setup
 - uid: WarcraftLegacies.Source.Dialogue.LordaeronDialogueSetup
   name: LordaeronDialogueSetup
   href: api-source/WarcraftLegacies.Source.Dialogue.LordaeronDialogueSetup.html
