--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -18906,6 +18906,25 @@ references:
   commentId: N:WarcraftLegacies.Source.Dialogue
   fullName: WarcraftLegacies.Source.Dialogue
   nameWithType: WarcraftLegacies.Source.Dialogue
+- uid: WarcraftLegacies.Source.Dialogue.DalaranDialogueSetup
+  name: DalaranDialogueSetup
+  href: api-source/WarcraftLegacies.Source.Dialogue.DalaranDialogueSetup.html
+  commentId: T:WarcraftLegacies.Source.Dialogue.DalaranDialogueSetup
+  fullName: WarcraftLegacies.Source.Dialogue.DalaranDialogueSetup
+  nameWithType: DalaranDialogueSetup
+- uid: WarcraftLegacies.Source.Dialogue.DalaranDialogueSetup.Setup
+  name: Setup()
+  href: api-source/WarcraftLegacies.Source.Dialogue.DalaranDialogueSetup.html#WarcraftLegacies_Source_Dialogue_DalaranDialogueSetup_Setup
+  commentId: M:WarcraftLegacies.Source.Dialogue.DalaranDialogueSetup.Setup
+  fullName: WarcraftLegacies.Source.Dialogue.DalaranDialogueSetup.Setup()
+  nameWithType: DalaranDialogueSetup.Setup()
+- uid: WarcraftLegacies.Source.Dialogue.DalaranDialogueSetup.Setup*
+  name: Setup
+  href: api-source/WarcraftLegacies.Source.Dialogue.DalaranDialogueSetup.html#WarcraftLegacies_Source_Dialogue_DalaranDialogueSetup_Setup_
+  commentId: Overload:WarcraftLegacies.Source.Dialogue.DalaranDialogueSetup.Setup
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Dialogue.DalaranDialogueSetup.Setup
+  nameWithType: DalaranDialogueSetup.Setup
 - uid: WarcraftLegacies.Source.Dialogue.DruidsDialogueSetup
   name: DruidsDialogueSetup
   href: api-source/WarcraftLegacies.Source.Dialogue.DruidsDialogueSetup.html
